[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["NonDoctor <tsucintosh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
aiohttp = "^3.10.10"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
